compiler/tools/fpp-check/test/state_machine/typed_elements/state_choice_bad_guard_type.ref.txt
fpp-check
[ local path prefix ]/compiler/tools/fpp-check/test/state_machine/typed_elements/state_choice_bad_guard_type.fpp:6.19
    choice J { if g enter T else enter T }
                  ^
error: type mismatch at junction
type of junction is None
type of guard is U32
